--- a/project-boilerplate/style.css
+++ b/project-boilerplate/style.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&family=Roboto:wght@400;700&display=swap');
+
+*{
+    box-sizing:border-box;
+}
 body{
     font-family: 'Roboto',sans-serif;
+    display:flex;
+    margin:0;
 }
